--- a/pyproject.toml
+++ b/pyproject.toml
@@ -56,6 +56,8 @@ full = [
     "pypdf",
     "nltk",
     "qdrant-client",
+    "pandas",
+    "openpyxl"
 ]
 dev = [
     # Include full dependencies from local package
