--- a/pyproject.toml
+++ b/pyproject.toml
@@ -56,6 +56,7 @@ full = [
     "pypdf",
     "nltk",
     "qdrant-client",
+    "python-pptx"
 ]
 dev = [
     # Include full dependencies from local package
