--- a/.gitignore
+++ b/.gitignore
@@ -136,3 +136,11 @@ dmypy.json
 # docs
 docs/tutorial/en/build/
 docs/tutorial/zh_CN/build/
+
+# Sphinx build artifacts
+docs/tutorial/doctrees_en/
+docs/tutorial/doctrees_zh/
+docs/tutorial/**/doctrees/
+docs/tutorial/**/.doctrees/
+docs/tutorial/**/.buildinfo
+docs/tutorial/**/*.pickle
