fix versions for opentelemetry

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,10 +30,10 @@ dependencies = [
     "numpy",
     "openai",
     "python-datauri",
-    "opentelemetry-api",
-    "opentelemetry-sdk",
-    "opentelemetry-exporter-otlp",
-    "opentelemetry-semantic-conventions",
+    "opentelemetry-api>=1.39.0",
+    "opentelemetry-sdk>=1.39.0",
+    "opentelemetry-exporter-otlp>=1.39.0",
+    "opentelemetry-semantic-conventions>=0.60b0",
     "python-socketio",
     "shortuuid",
     "tiktoken",
