--- a/pyproject.toml
+++ b/pyproject.toml
@@ -106,10 +106,12 @@ readers = [
 qdrant = ["qdrant-client==1.15.1"]
 milvus = ["pymilvus[milvus_lite]"]
 ali_mysql = ["mysql-connector-python"]
+pymongo = ["pymongo"]
 vdbs = [
     "agentscope[ali_mysql]",
     "agentscope[qdrant]",
     "agentscope[milvus]",
+    "agentscope[pymongo]",
 ]
 
 
