--- a/pyproject.toml
+++ b/pyproject.toml
@@ -106,12 +106,12 @@ readers = [
 qdrant = ["qdrant-client==1.15.1"]
 milvus = ["pymilvus[milvus_lite]"]
 ali_mysql = ["mysql-connector-python"]
-pymongo = ["pymongo"]
+mongodb = ["pymongo"]
 vdbs = [
     "agentscope[ali_mysql]",
     "agentscope[qdrant]",
     "agentscope[milvus]",
-    "agentscope[pymongo]",
+    "agentscope[mongodb]",
 ]
 
 
