--- a/pyproject.toml
+++ b/pyproject.toml
@@ -85,7 +85,7 @@ memory = [
 # readers
 text-reader = ["nltk"]
 pdf-reader = [
-    "agentscope[text_reader]",
+    "agentscope[text-reader]",
     # TODO: the latest pypdf has some issues with parsing PDFs
     #  (2026-01-13), so we fix the version here temporarily.
     "pypdf<=6.5.0",
